--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
       <a class="navbar-brand" href="{% url 'wiki-list-page' %}"><i class="fas fa-fw fa-book"></i> makewiki</a>
       <form class="form-inline ml-auto">
         <div class="text-white">Hello, <strong>USERNAME</strong>!</div>
-        <a href="#" class="btn btn-success ml-4">New Page</a>
+        <a href="{% url 'wiki-create-page'%}" class="btn btn-success ml-4">New Page</a>
         <a href="{% url 'logout'%}" class="btn btn-danger ml-2">Log Out</a>
         <a href="{% url 'login'%}" class="btn btn-secondary ml-2">Log In</a>
         <a href="{% url 'signup'%}" class="btn btn-primary ml-2">Sign Up</a>
